Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Jan-2011 Mark Dexter
# [#24250] PHP Notice In Archived Layout
# Sample data fixes (Elin Waring)

10-Jan-2011 Andrew Eddie
 # Fix typo in Joomla system plugin.
 # Fixed issue [#24226] XSS Vulnerability in module chrome in administrator (Ian MacLennan).
 # Fixed issue [#24237] Database setup screen - radio button does not accomodate longer lang strings (Serge Litvinov, Andrea Tarr).
 # Fixed issue [#24221] JFormFieldRules creates invalid markup (Rouven Weßling, Andrea Tarr).
 # Fixed issue [#24215] Some small improvements to the installation (Rouven Weßling).
 # Fixed issue [#23992] Admin Bluestork template - Alignment of form text fields in IE7 (Ole Bang Ottosen, Bill Richardson).
 # Fixed issue [#24153] More PHP strict fixes (mostly backend) (Rouven Weßling, Mark Dexter).
 # Fixed issue [#24200] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24202] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24204] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24207] Level controller does not cast primary keys from request to int (Ian MacLennan).

09-Jan-2011 Christophe Demko
 # [#24210] Revert to 1.5 behaviour for plugin language loading (Samuel Moffat)
 # [#24128] * Forms displayed in front-end gets same attributes as when using them to edit
 # [#23939] No empty menus in menu
 # [#24229] Typo in sample data (Rouven Weßling)
 # [#24223] Article link from archive view doesn't work (Elin Waring)
 # [#24234] Missing fied display_num in menu items type of category list (Akarawuth Tamrareang)
 ^ Reverting commit #20205 since it breaks language loading
 # [#24246] File used in bee5 css does not exists