@@ -30,6 +30,7 @@ $ -> Language fix or change
 10-Jan-2011 Mark Dexter
 # [#24250] PHP Notice In Archived Layout
 # Sample data fixes (Elin Waring)
+# [#24251] Article Category List Menu Item Missing Order By Parameters
 
 10-Jan-2011 Andrew Eddie
  # Fix typo in Joomla system plugin.
